# AI-court-AI

./: .dockerignore  .env.example  .gitignore  COLLECTOR_GUIDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  Kanoon_cases.py  PIPELINE_GUIDE.md  README.md  RESEARCH_METHODOLOGY.md  app.py  cases.py  check_training_data.py  child_labour.csv  clean_database.py  compose.yml  constraints.txt  debug_case_Unknown_Case.txt  debug_page_1.html  debug_page_2.html  debug_search_1.html  debug_search_2.html  docker-compose.yml  gunicorn.conf.py  label_encoder.pkl  legal_case_classifier.pkl  legal_case_classifier.py  legal_case_classifier1.pkl  legal_case_classifier2.pkl  legal_case_classifier3.pkl  metrics_dashboard.py  mypy.ini  property_disputes.csv  pyproject.toml  quick_status.py  render.yaml  requirements-dev.txt  requirements.txt  run_server.py  smoke_client.py  (+1 more)
.github/: dependabot.yml
data/: al_queue.json  harvest_manifest.json  queries.example.csv  query_catalog.json  rape_murder_cases.csv  rape_murder_cases_summarized.csv
docs/: DATA_SHEET.md  MODEL_CARD.md  ONTOLOGY.md
models/: confusion_matrix.json  legal_case_classifier.pkl  metadata.json  metrics.json  search_index.pkl
scripts/: bench_search_topk.py  build_search_index.py  build_semantic_index.py  build_statute_vectors.py  bulk_harvest.py  check_data_dist.py  check_distribution.py  cleanup_repo.py  continuous_collector.py  convert_hf_datasets.py  count_all_data.py  debug_kanoon.py  download_datasets.py  download_ildc.py  download_large_datasets.py  enrich_summaries_with_hf.py  evaluate_saved_model.py  full_verification.py  (+20 more)
(+114 files in other folders)
